# rustic_reach

./: Cargo.toml  readme.md
.devcontainer/: devcontainer.json  setup.sh
app/: index.html  package.json
app/src/: App.css  App.tsx  main.tsx
app/src/components/: Editor.tsx  MyEditor.tsx
app/src/components/Editor/: MyFooter.tsx  MyHead.tsx  MyPreview.tsx  MyToolbar.tsx
app/src/components/MyEditor/: MyEditorPreview.tsx  MyEditorTabs.tsx  MyEditorToolbar.tsx
app/src/components/MyEditor/MyEditorPreview/: MyEditorPreviewArmModel.tsx  MyEditorPreviewAxesHelper.tsx  MyEditorPreviewGridHelper.tsx  MyEditorPreviewTools.tsx
app/src/components/MyEditor/MyEditorPreview/MyEditorPreviewTools/: MyEditorPreviewOrientEndEffectorTool.tsx  MyEditorPreviewTranslateEndEffectorTool.tsx
app/src/components/MyEditor/MyEditorTabs/: MyEditorHomeTab.tsx  MyEditorSettingsTab.tsx
app/src/hooks/: useRaycaster.tsx
app/src/providers/: MyArmProvider.tsx
com/: Cargo.toml  build.rs
com/proto/: arm.proto
com/src/: proto.rs
com/src/server/: mod.rs
firmware/: Cargo.toml  deploy.sh
firmware/src/: main.rs  pose.rs  servo_writer_api.rs
firmware/src/api/: mod.rs  servo_group_reader.rs  servo_group_writer.rs
kinematics/: Cargo.toml
pca9685/: Cargo.toml  readme.md
pca9685/src/: device.rs  lib.rs  math.rs  memory.rs
pca9685_servo/: Cargo.toml
pca9685_servo/src/: lib.rs  math.rs  settings.rs
pca9685_servo/src/servo/: mod.rs  reader.rs  writer.rs
