[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.17.1"
pca9685 = { path = "../pca9685" }
tokio = { version = "1.37.0", features = ["tokio-macros", "full"] }
pca9685_servo = { path = "../pca9685_servo" }
tokio-util = { version = "0.7.10", features = ["full"] }
tonic = "0.11.0"
com = { path = "../com"}
tokio-stream = { version = "0.1.15", features = ["full"] }
thiserror = "1.0.59"
